--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
+	"id": "obsidian-auto-backlinks",
+	"name": "Automatic Backlinks",
 	"version": "1.0.1",
 	"minAppVersion": "0.12.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
+	"description": "This plugin will automatically generate backlinks for file under same level",
+	"author": "raakhul",
 	"authorUrl": "https://obsidian.md",
 	"isDesktopOnly": false
 }
